# optimus-plex

./: Dockerfile  README.md  optimus-plex  pyproject.toml
src/api/: __init__.py  plex.py
src/converter/: converter.py
src/crowler/: __init__.py
src/utils/: __init__.py  log.py
