[tool.poetry]
name = "optimus-plex"
version = "0.1.0"
description = "Optimise your Plex media Library"
authors = ["Pablo Minue"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
